# generate-watertight-meshes-and-sdf-grids

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  example.sh
python_scripts/: Vox.py  marching_cubes.py  requirements.py
src/: main.cpp  mesh2df.cu  mesh2df.cuh  sdf.cu  sdf.cuh  util.h  vec.h  voxelize_project.cpp  voxelize_project.h  watershed.cu  watershed.cuh
src/base/: LoaderMesh.h  SVox.h  Triangle.h  Vox.h  Vox.py  cxxopts.hpp
